# rasterize

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: project-structure.md
scripts/: check_engines.py  helpers.py  setup.py
skills/image/: SKILL.md
skills/image/references/: pillow.md  playwright.md
skills/image/shared/: canvas.md  fonts.md  setup.md
skills/render/: SKILL.md
skills/render/references/: cairo.md  matplotlib.md  plotly.md
skills/render/shared/: themes.md
