[project]
name = "rasterize"
version = "1.0.0"
description = "Multi-engine raster image generation plugin for Claude Code"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "Pillow>=12.1",
    "pycairo>=1.29",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "numpy>=2.4",
    "pandas>=3.0",
    "plotly>=6.6",
    "kaleido>=1.2.0",
    "playwright>=1.58",
]

[project.optional-dependencies]
pango = ["PyGObject>=3.56"]
extras = ["freetype-py>=2.5"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
setup = { shell = "pdm install && pdm run playwright install chromium" }
check = { call = "scripts.check_engines:main" }
